# tpDcc-libs-psd

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
tests/: test_general.py
tpDcc/libs/psd/: __init__.py  __logging__.ini  __version__.py  _version.py
tpDcc/libs/psd/core/: consts.py  document.py  sequence.py
